# flatcam

./: .gitignore  CHANGELOG.md  FlatCAMApp.py  FlatCAMDraw.py  FlatCAMGUI.py  FlatCAMObj.py  FlatCAMTool.py  FlatCAMVersion.py  GUIElements.py  ObjectCollection.py  ObjectUI.py  PlotCanvas.py  README.md  ToolDblSided.py  ToolMeasurement.py  ToolTransform.py  camlib.py  flatcam  make_win32.py  pyproject.toml  requirements.txt  setup.py  setup_ubuntu.sh  termwidget.py
sandbox/: process_widget.py
tclCommands/: TclCommand.py  __init__.py
tests/: test_excellon_flow.py  test_gerber_flow.py  test_svg_flow.py  test_tcl_shell.py
tests/canvas/: performance.py
