[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = [
    "setuptools >= 68.1.2",
    "numpy>=1.8,<2.0",
    "shapely>=1.3,<=1.8",
    "matplotlib",
    "simplejson",
    "rtree",
    "scipy",
    "svg.path"
]
build-backend = "setuptools.build_meta"
